reorganized files structure

--- a/strategy/CMakeLists.txt
+++ b/strategy/CMakeLists.txt
@@ -9,10 +9,11 @@ endif()
 
 set(CMAKE_CXX_STANDARD 17)
 
-file(GLOB HEADERS "*.hpp" "model/*.hpp" "stream/*.hpp")
-file(GLOB SRC "*.cpp" "model/*.cpp" "stream/*.cpp")
+file(GLOB HEADERS "*.hpp" "model/*.hpp" "stream/*.hpp" "include/*.hpp")
+file(GLOB SRC "*.cpp" "model/*.cpp" "stream/*.cpp" "source/*.cpp")
 
 SET_SOURCE_FILES_PROPERTIES(${HEADERS} PROPERTIES HEADER_FILE_ONLY TRUE)
-
 add_executable(aicup2020 ${HEADERS} ${SRC})
+
+include_directories(aicup2020 PUBLIC include model)
 TARGET_LINK_LIBRARIES(aicup2020 ${PROJECT_LIBS})
